included gender data and fixed accur.

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "data = pd.read_csv('titanic//train.csv')\n",
     "\n",
     "\n",
-    "X = data.drop([\"Embarked\", \"Cabin\", \"Name\", \"Sex\", \"Ticket\", \"Age\",\"Pclass\"], axis=1)\n",
+    "X = data.drop([\"Embarked\", \"Cabin\", \"Name\", \"Sex\", \"Ticket\", \"Age\",\"Pclass\", \"Survived\"], axis=1)\n",
     "y = data[\"Survived\"]\n",
     "# split into train and test set\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
@@ -34,23 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SVC(C=10000000000.0, cache_size=200, class_weight=None, coef0=0.0,\n",
-       "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='linear',\n",
-       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
-       "  tol=0.001, verbose=False)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = SVC(kernel='linear', C=1E10)\n",
     "model.fit(X_train, y_train)\n",
@@ -59,17 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred = model.predict(X_test)\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n"
