--- a/RandomForest.ipynb
+++ b/RandomForest.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import csv\n",
-    "data = pd.read_csv('titanic//train.csv')"
+    "data = pd.read_csv('titanic//train.csv')\n"
    ]
   },
   {
@@ -575,8 +575,209 @@
     "print(y_pred)\n",
     "print(y_test)\n",
     "\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 0 1 0 1 1 1 1 1 1 0 1 1 0 1 0 0 1 0 1 0 0 1 0 1 1 0 0 0 1 1 0 1 0 1 0\n",
+      " 1 0 0 1 0 1 0 1 0 1 0 1 1 0 1 1 1 1 0 1 1 0 1 0 0 1 0 1 1 0 0 0 1 0 0 1 1\n",
+      " 1 0 1 0 1 0 0 1 1 0 0 1 0 0 1 1]\n",
+      "281    0\n",
+      "452    0\n",
+      "87     0\n",
+      "347    1\n",
+      "392    0\n",
+      "34     0\n",
+      "604    1\n",
+      "325    1\n",
+      "389    1\n",
+      "587    1\n",
+      "610    0\n",
+      "704    0\n",
+      "336    0\n",
+      "268    1\n",
+      "643    1\n",
+      "627    1\n",
+      "348    1\n",
+      "782    0\n",
+      "172    1\n",
+      "104    0\n",
+      "205    0\n",
+      "467    0\n",
+      "454    0\n",
+      "257    1\n",
+      "850    0\n",
+      "114    0\n",
+      "680    0\n",
+      "568    0\n",
+      "125    1\n",
+      "775    0\n",
+      "      ..\n",
+      "662    0\n",
+      "287    0\n",
+      "330    1\n",
+      "495    0\n",
+      "264    0\n",
+      "669    1\n",
+      "597    0\n",
+      "200    0\n",
+      "0      0\n",
+      "866    1\n",
+      "217    0\n",
+      "349    0\n",
+      "370    1\n",
+      "255    1\n",
+      "700    1\n",
+      "5      0\n",
+      "417    1\n",
+      "517    0\n",
+      "585    1\n",
+      "302    0\n",
+      "464    0\n",
+      "885    0\n",
+      "190    1\n",
+      "145    0\n",
+      "552    0\n",
+      "747    1\n",
+      "845    0\n",
+      "112    0\n",
+      "578    0\n",
+      "135    0\n",
+      "Name: Survived, Length: 90, dtype: int64\n",
+      "Accuracy: 0.7666666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "# create the classifier\n",
+    "classifier = GaussianNB()\n",
+    "\n",
+    "# Train the model using the training sets\n",
+    "classifier.fit(X_train, y_train)\n",
+    "\n",
+    "# predictin on the test set\n",
+    "y_pred = classifier.predict(X_test)\n",
+    "\n",
+    "print(y_pred)\n",
+    "print(y_test)\n",
+    "\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 0 1 0 1 0 1 1 0 0 0 0 1 0 1 0 0 1 0 1 0 0 1 0 1 1 0 0 0 1 1 0 1 0 1 0\n",
+      " 1 0 0 1 0 0 0 1 0 1 0 1 1 0 1 1 1 1 0 1 0 0 0 0 0 1 0 1 1 0 0 0 1 0 0 1 1\n",
+      " 1 0 1 0 1 0 0 1 1 0 0 1 0 0 1 0]\n",
+      "281    0\n",
+      "452    0\n",
+      "87     0\n",
+      "347    1\n",
+      "392    0\n",
+      "34     0\n",
+      "604    1\n",
+      "325    1\n",
+      "389    1\n",
+      "587    1\n",
+      "610    0\n",
+      "704    0\n",
+      "336    0\n",
+      "268    1\n",
+      "643    1\n",
+      "627    1\n",
+      "348    1\n",
+      "782    0\n",
+      "172    1\n",
+      "104    0\n",
+      "205    0\n",
+      "467    0\n",
+      "454    0\n",
+      "257    1\n",
+      "850    0\n",
+      "114    0\n",
+      "680    0\n",
+      "568    0\n",
+      "125    1\n",
+      "775    0\n",
+      "      ..\n",
+      "662    0\n",
+      "287    0\n",
+      "330    1\n",
+      "495    0\n",
+      "264    0\n",
+      "669    1\n",
+      "597    0\n",
+      "200    0\n",
+      "0      0\n",
+      "866    1\n",
+      "217    0\n",
+      "349    0\n",
+      "370    1\n",
+      "255    1\n",
+      "700    1\n",
+      "5      0\n",
+      "417    1\n",
+      "517    0\n",
+      "585    1\n",
+      "302    0\n",
+      "464    0\n",
+      "885    0\n",
+      "190    1\n",
+      "145    0\n",
+      "552    0\n",
+      "747    1\n",
+      "845    0\n",
+      "112    0\n",
+      "578    0\n",
+      "135    0\n",
+      "Name: Survived, Length: 90, dtype: int64\n",
+      "Accuracy: 0.8111111111111111\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# create the classifier\n",
+    "classifier = LogisticRegression()\n",
+    "\n",
+    "# Train the model using the training sets\n",
+    "classifier.fit(X_train, y_train)\n",
+    "\n",
+    "# predictin on the test set\n",
+    "y_pred = classifier.predict(X_test)\n",
+    "\n",
+    "print(y_pred)\n",
+    "print(y_test)\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
