Added two more different training models (Logistic and Gaussier, alongside with RandomForest) to test the accur. values from both. From all the three, RandomForest gave the highest accurate accuracy number, and Gaussier gave the lowest

--- a/RandomForest.ipynb
+++ b/RandomForest.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import csv\n",
-    "data = pd.read_csv('titanic//train.csv')\n"
+    "data = pd.read_csv('titanic//train.csv')"
    ]
   },
   {
